# RoboFlock

./: .gitignore  .gitignore.save  README.md  jetsonBoth.py  tomBoth.py
ExtraDocs/: frames_2026-02-25_12.45.58.gv
URDF_description/: package.xml
URDF_description/launch/: gazebo.launch.py
URDF_description/urdf/: URDF.gazebo  URDF.trans  URDF.xacro
install/: local_setup.sh  setup.sh
install/lidar_test/lib/lidar_test/: lidar_subscriber
install/lidar_test/share/lidar_test/: package.dsv  package.ps1  package.sh
install/my-test-package/share/my-test-package/: package.sh
install/rplidar_ros/lib/rplidar_ros/: rplidar_client  rplidar_composition
install/rplidar_ros/share/rplidar_ros/: local_setup.sh  package.sh
install/ultrasonic_ros/lib/ultrasonic_ros/: ultrasonic_publisher
install/ultrasonic_ros/share/ament_index/resource_index/parent_prefix_path/: ultrasonic_ros
install/ultrasonic_ros/share/ultrasonic_ros/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ultrasonic_ros/share/ultrasonic_ros/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake
lidar_test/: package.xml  setup.py
lidar_test/lidar_test/: test_lidar.py
log/: latest_build
robo_sims/: package.xml  setup.py
robo_sims/meshes/: bracket_left_1.stl  diff_bar_1.stl  hull_mid_1.stl  hull_top_1.stl  motor_right_front_1.stl  motor_right_rear_1.stl  pushrod_left_1.stl  rocker_right_1.stl
robo_sims/urdf/: robot.gazebo
roboflock_localization/: CMakeLists.txt  package.xml
roboflock_localization/config/: ekf_global_config.yaml  ekf_local_config.yaml  navsat_config.yaml
roboflock_localization/launch/: ekf_navsat_launch.py
roboflock_localization/params/: ekf_navsat_params.yaml  gps.yaml
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/mpu9250driver/lib/mpu9250driver/: mpu9250driver
ros2_ws/install/mpu9250driver/share/mpu9250driver/: local_setup.sh  package.ps1  package.sh
ros2_ws/install/rf2o_laser_odometry/share/rf2o_laser_odometry/: local_setup.sh  package.ps1  package.sh
ros2_ws/install/roboflock_localization/share/roboflock_localization/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/roboflock_localization/share/roboflock_localization/cmake/: roboflock_localizationConfig.cmake
ros2_ws/install/roboflock_localization/share/roboflock_localization/launch/: ekf_navsat_launch.py
ros2_ws/install/roboflock_localization/share/roboflock_localization/params/: gps.yaml
ros2_ws/install/rplidar_ros/lib/rplidar_ros/: rplidar_client  rplidar_node
ros2_ws/install/rplidar_ros/share/rplidar_ros/: local_setup.sh  package.ps1  package.sh
ros2_ws/log/: latest_build
ros2_ws/src/roboflock_localization/: CMakeLists.txt
ros2_ws/src/roboflock_localization/launch/: ekf_navsat_launch.py
ros2_ws/src/roboflock_localization/params/: ekf_navsat_params.yaml  mpu9250.yaml  rf2o.yaml
ros2_ws/src/roboflock_localization/src/: rf_localization_node.cpp
src/URDF_description/launch/: gazebo.launch.py
src/URDF_description/urdf/: URDF.gazebo
src/gps_pkg/: CMakeLists.txt  package.xml
src/gps_pkg/src/: robot_gps_publisher.cpp
src/robo_sims/: package.xml  setup.cfg
src/robo_sims/launch/: display.launch.py  gazebo.launch.py
src/robo_sims/meshes/: base_link.stl  bracket_right_1.stl  motor_left_front_1.stl  motor_left_rear_1.stl  pushrod_right_1.stl  rocker_left_1.stl  wheel_left_front_1.stl  wheel_left_rear_1.stl  wheel_right_front_1.stl  wheel_right_rear_1.stl
src/robo_sims/urdf/: robot.trans  robot.xacro
src/ultrasonic_pkg/: CMakeLists.txt  package.xml
src/ultrasonic_pkg/src/: lvmax_publisher.cpp
src/ultrasonic_ros/: CMakeLists.txt
src/ultrasonic_ros/include/ultrasonic_ros/: ultrasonic_publisher.hpp
src/ultrasonic_ros/launch/: ultrasonic_publisher.launch.py
src/ultrasonic_ros/src/: ultrasonic_publisher.cpp
static/: leaflet.css
templates/: index.html
templates/old indexes/: index - Copy.html  index - beforeTestingWithHome.html  index - workingHardcodedUB.html  index - workingHome.html  indexBothUB.html  indexOneGpsUBinitMarkers.html
ultrasonic_pkg/: CMakeLists.txt  package.xml
ultrasonic_pkg/include/ultrasonic_pkg/data_wrappers/: FullScan.hpp  RequestPacket.hpp  ReturnDataWrappers.hpp
ultrasonic_pkg/include/ultrasonic_pkg/lidar/: RPLidar.hpp  SerialCommunication.hpp
ultrasonic_pkg/launch/: ultrasonic_publisher.launch.py
ultrasonic_pkg/params/: ultrasonic_publisher.yaml
ultrasonic_pkg/src/: ultrasonic_node.cpp  ultrasonic_publisher.cpp
ultrasonic_pkg/src/data_wrappers/: ExpressScanPacket.cpp  RequestPacket.cpp
ultrasonic_pkg/src/lidar/: RPLidar.cpp  SerialCommunication.cpp
